--- a/projetoagenda/src/views/login.ejs
+++ b/projetoagenda/src/views/login.ejs
@@ -11,9 +11,9 @@
       <%- include('includes/messages'); %> 
 
       <div class="row">
-        <div class="col-lg">
+        <div class="col-lg my-5">
           <h4>Faça seu cadastro</h4>
-          <form action="/login/register" method="POST">
+          <form class="form-cadastro" action="/login/register" method="POST">
             <input type="hidden" name="_csrf" value=<%= csrfToken %>>
             <div class="form-group">
               <label>Email</label>
@@ -29,9 +29,9 @@
         </div>
 
 
-        <div class="col-lg">
+        <div class="col-lg my-5">
           <h4>Faça login</h4>
-            <form action="/login/login" method="POST">
+            <form class="form-login" action="/login/login" method="POST">
               <input type="hidden" name="_csrf" value=<%= csrfToken %>>
                <div class="form-group">
                 <label>Email</label>
